--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "private": true,
   "description": "Electron + Next.js desktop app for World Clock",
   "author": "Your Name",
-  "main": "electron/main.js",
+  "main": "dist/electron/main.js",
   "scripts": {
-    "dev": "concurrently -n \"NEXT,ELECTRON\" -c \"yellow,blue\" --kill-others \"next dev\" \"electron .\"",
-    "build": "next build && electron-builder",
+    "dev": "npm run build:electron && concurrently -n \"TSC,NEXT,ELECTRON\" -c \"cyan,yellow,blue\" --kill-others \"tsc -p tsconfig.electron.json --watch\" \"next dev\" \"wait-on http://localhost:3000 && electron .\"",
+    "prebuild": "rimraf dist out .next",
+    "build": "npm run build:electron && npm run build:frontend",
+    "build:electron": "tsc -p tsconfig.electron.json",
+    "build:frontend": "next build",
+    "postinstall": "electron-builder install-app-deps",
+    "dist": "npm run build && electron-builder",
+    "dist:win": "npm run build && electron-builder --win",
+    "dist:mac": "npm run build && electron-builder --mac",
+    "dist:linux": "npm run build && electron-builder --linux",
+    "clean": "rimraf dist out .next node_modules/.cache",
     "start": "next start",
     "lint": "eslint"
   },
@@ -26,16 +35,20 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/electron": "^1.4.38",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "electron": "^39.0.0",
     "electron-builder": "^26.0.12",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "rimraf": "^6.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^9.0.1"
   }
 }
